--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,6 +18,8 @@ body {
   background-color: #ededed;
 }
 
+
+
 /* Media query for body */
 @media only screen and (max-width: 767px) {
   /* Set background color to white on small screens */
@@ -230,9 +232,9 @@ body {
   font-family: Georgia, Times, "Times New Roman", serif;
 
   /* Typography */
-  font-size: 20px;
+  color: #10bbb2;
   font-weight: bold;
-  color: #4aaaa5;
+  font-size: 8;
   text-align: center;
 }
 
